# fristenkalender-functions

./: .env.example  .gitignore  Dockerfile  README.md  azure.yaml  domain-specific-terms.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  deploy-azure.yml  docker-build-test.yml  formatting.yml  main_fristenkalender.yml  publish-ghcr.yml  pythonlint.yml  unittests.yml
GenerateAndExportWholeCalendar/: __init__.py
GenerateFristenForType/: __init__.py  function.json
dev_requirements/: requirements-formatting.txt  requirements-linting.txt  requirements-tests.txt  requirements-type_check.txt
docs/plans/: 2025-12-09-azure-to-fastapi-migration-design.md  2025-12-09-azure-to-fastapi-migration.md
infra/aspire/FristenkalenderFunctions.AppHost/: FristenkalenderFunctions.AppHost.csproj  Program.cs
infra/aspire/FristenkalenderFunctions.AppHost/Properties/: launchSettings.json
infra/bicep/: main.bicep
infra/bicep/modules/: container-app.bicep  container-apps-environment.bicep  container-registry.bicep
scripts/: update_version.sh  verify-mcp.sh
src/: _fristenkalender_generator_version.py  _your_package_version.py
src/GenerateAllFristen/: __init__.py  function.json
src/GenerateAndExportFristenForType/: __init__.py  function.json
src/GenerateAndExportWholeCalendar/: __init__.py  function.json
src/GenerateFristenForType/: __init__.py  function.json
src/SimpleCalenderEndpoint/: __init__.py  function.json
src/app/: main.py  version.json
src/app/mcp_server/: __init__.py  settings.py
src/app/routers/: calendar.py  fristen.py
unittests/: conftest.py  test_app.py  test_calendar.py  test_docker.py  test_generate_all_fristen.py  test_generate_and_export_fristen_for_type.py  test_generate_and_export_whole_calendar.py  test_generate_fristen_for_type.py  test_mcp_server.py  test_simple_subscription_endpoint.py
