[project]
name = "fristenkalender-functions"
description = "A package that provides functions for the Hochfrequenz Fristenkalender, for the technical infrastrukture."
license = { text = "MIT" }
requires-python = ">=3.14" # if you have py 3.14 not installed, >=3.11 will most likely work too, it's just not tested
authors = [{ name = "Hochfrequenz Unternehmensberatung", email = "info+github@hochfrequenz.de" }]
keywords = ["fristenkalender", "bdew", "hochfrequenz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[standard]==0.128.0",
    "fristenkalender-generator==1.0.3",
    "holidays==0.89",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==9.0.2",
    "httpx",
]
linting = [
    "pylint==4.0.4"
]
type_check = [
    "mypy==1.19.1"
]
spell_check = [
    "codespell==2.4.1"
]
coverage = [
    "coverage==7.13.2"
]
formatting = [
    "black==26.1.0",
    "isort==7.0.0"
]
packaging = [
    "build==1.4.0",
    "twine==6.2.0"
]
dev = [
    "pip-tools"
]


[project.urls]
Changelog = "https://github.com/Hochfrequenz/fristenkalender-functions/releases"
Homepage = "https://github.com/Hochfrequenz/fristenkalender-functions"

[tool.black]
line-length = 120
target_version = ["py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_your_package_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src/app"]
sources = ["src"]
